--- a/extra_playbooks/roles/kubernetes-apps/echoserver/templates/echoserver.svc.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/echoserver/templates/echoserver.svc.yaml.j2
@@ -7,9 +7,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: echoserver-svc
-  namespace: "{{boss__echoserver__namespace_name}}"
-  labels: "{{boss__echoserver__service_labels}}"
+  namespace: {{boss__echoserver__namespace_name}}
+{%   if boss__echoserver__service_labels is defined %}
+  labels:
+    {{ boss__echoserver__service_labels | to_nice_yaml(indent=2) }}
     # run: nginx
+{%   endif %}
 spec:
   # In a production setup, we recommend accessing Grafana through an external Loadbalancer
   # or through a public IP.
@@ -30,6 +33,9 @@ spec:
     targetPort: 8080
     protocol: TCP
     name: http
-  selector: "{{boss__echoserver__service__spec_selector}}"
+{%   if boss__echoserver__service__spec_selector is defined %}
+  selector:
+    {{ boss__echoserver__service__spec_selector | to_nice_yaml(indent=2) }}
     # app: echoserver
     # run: nginx
+{%   endif %}
