--- a/extra_playbooks/roles/kubernetes-apps/echoserver/templates/0echoserver.namespace.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/echoserver/templates/0echoserver.namespace.yaml.j2
@@ -1,4 +1,4 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: "{{boss__echoserver__namespace_name}}"
+  name: {{boss__echoserver__namespace_name}}
