--- a/extra_playbooks/roles/kubernetes-apps/echoserver/templates/echoserver.ingress.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/echoserver/templates/echoserver.ingress.yaml.j2
@@ -13,19 +13,25 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: echoserver-ingress
-  namespace: "{{boss__echoserver__namespace_name}}"
-  annotations: "{{boss__echoserver__ingress_annotations}}"
+  namespace: {{boss__echoserver__namespace_name}}
+{%   if boss__echoserver__ingress_annotations is defined %}
+  annotations:
+    {{ boss__echoserver__ingress_annotations | to_nice_yaml(indent=2) }}
     # # Note the nginx.ingress.kubernetes.io/ssl-redirect annotation. It is used since we are not specifying a host. When no host is specified, then the default-server is hit, which is configured with a self-signed certificate, and redirects http to https. This issue explains more.
     # # https://github.com/kubernetes/ingress-nginx/issues/1567
     # nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
     # # NOTE: you need this when the value of path below is more than just '/'
     # # nginx.ingress.kubernetes.io/rewrite-target: /
     # # kubernetes.io/ingress.class: \"nginx\"
-  labels: "{{boss__echoserver__ingress_labels}}"
+{%   endif %}
+{%   if boss__echoserver__ingress_labels is defined %}
+  labels:
+    {{ boss__echoserver__ingress_labels | to_nice_yaml(indent=2) }}
     # run: nginx
+{%   endif %}
 spec:
   rules:
-  - host: "{{boss__echoserver__echoserver_subdomain}}.{{ domain_root }}"
+  - host: {{boss__echoserver__echoserver_subdomain}}.{{ domain_root }}
     http:
       paths:
       # - path: /echoserver
