--- a/extra_playbooks/roles/kubernetes-apps/calico/templates/rbac-kdd.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/calico/templates/rbac-kdd.yaml.j2
@@ -90,4 +90,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: calico-node
-  namespace: kube-system
+  namespace: {{ boss__calico__namespace_name }}
