--- a/extra_playbooks/roles/kubernetes-apps/efk/templates/es-curator.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/efk/templates/es-curator.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: es-curator
-  namespace: kube-system
+  namespace: {{boss__efk__namespace_name}}
   labels:
     k8s-app: es-curator
     boss-part-of: efk
