--- a/extra_playbooks/roles/kubernetes-apps/efk/templates/es-service.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/efk/templates/es-service.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: elasticsearch-logging
-  namespace: kube-system
+  namespace: {{boss__efk__namespace_name}}
   labels:
     k8s-app: elasticsearch-logging
     kubernetes.io/cluster-service: "true"
