--- a/extra_playbooks/roles/kubernetes-apps/efk/templates/es-statefulset.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/efk/templates/es-statefulset.yaml.j2
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: elasticsearch-logging
-  namespace: kube-system
+  namespace: {{boss__efk__namespace_name}}
   labels:
     k8s-app: elasticsearch-logging
     kubernetes.io/cluster-service: "true"
@@ -33,7 +33,7 @@ rules:
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
-  namespace: kube-system
+  namespace: {{boss__efk__namespace_name}}
   name: elasticsearch-logging
   labels:
     k8s-app: elasticsearch-logging
@@ -43,7 +43,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: elasticsearch-logging
-  namespace: kube-system
+  namespace: {{boss__efk__namespace_name}}
   apiGroup: ""
 roleRef:
   kind: ClusterRole
@@ -55,7 +55,7 @@ apiVersion: apps/v1beta1
 kind: StatefulSet
 metadata:
   name: elasticsearch-logging
-  namespace: kube-system
+  namespace: {{boss__efk__namespace_name}}
   labels:
     k8s-app: elasticsearch-logging
     version: v5.6.2
