--- a/extra_playbooks/roles/kubernetes-apps/efk/templates/fluentd-es-ds.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/efk/templates/fluentd-es-ds.yaml.j2
@@ -17,7 +17,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: fluentd-es
-  namespace: kube-system
+  namespace: {{boss__efk__namespace_name}}
   labels:
     k8s-app: fluentd-es
     kubernetes.io/cluster-service: "true"
@@ -28,7 +28,7 @@ kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: fluentd-es
-  # namespace: kube-system
+  # namespace: {{boss__efk__namespace_name}}
   labels:
     k8s-app: fluentd-es
     kubernetes.io/cluster-service: "true"
@@ -49,7 +49,7 @@ kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: fluentd-es
-  # FIXME: DON'T WE NEED THIS?? # namespace: kube-system ( Answer is, no we dont )
+  # FIXME: DON'T WE NEED THIS?? # namespace: {{boss__efk__namespace_name}} ( Answer is, no we dont )
   labels:
     k8s-app: fluentd-es
     kubernetes.io/cluster-service: "true"
@@ -58,7 +58,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: fluentd-es
-  namespace: kube-system
+  namespace: {{boss__efk__namespace_name}}
   # FIXME: https://github.com/fluent/fluentd-kubernetes-daemonset/blob/master/fluentd-daemonset-elasticsearch-rbac.yaml
   apiGroup: ""
 roleRef:
@@ -73,7 +73,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: fluentd-es-v2.2.1
-  namespace: kube-system
+  namespace: {{boss__efk__namespace_name}}
   labels:
     k8s-app: fluentd-es
     version: v2.2.1
