--- a/extra_playbooks/roles/kubernetes-apps/efk/templates/kibana-deployment.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/efk/templates/kibana-deployment.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: kibana-logging
-  namespace: kube-system
+  namespace: {{boss__efk__namespace_name}}
   labels:
     k8s-app: kibana-logging
     kubernetes.io/cluster-service: "true"
