--- a/extra_playbooks/roles/kubernetes-apps/efk/templates/fluentd-es-configmap.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/efk/templates/fluentd-es-configmap.yaml.j2
@@ -3,9 +3,11 @@ apiVersion: v1
 metadata:
   name: fluentd-es-config-v0.1.0
   namespace: {{boss__efk__namespace_name}}
+
+{%   if boss__efk__fluentd_config_map_labels is defined %}
   labels:
-    addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: efk
+    {{ boss__efk__fluentd_config_map_labels | to_nice_yaml(indent=2) }}
+{%   endif %}
 data:
   containers.input.conf: |-
     # This configuration file for Fluentd / td-agent is used
@@ -376,8 +378,10 @@ apiVersion: v1
 metadata:
   name: fluentd-es-config-v0.1.6
   namespace: {{boss__efk__namespace_name}}
+{%   if boss__efk__fluentd_config_map_labels is defined %}
   labels:
-    addonmanager.kubernetes.io/mode: Reconcile
+    {{ boss__efk__fluentd_config_map_labels | to_nice_yaml(indent=2) }}
+{%   endif %}
 data:
   system.conf: |-
     <system>
