--- a/extra_playbooks/roles/kubernetes-apps/efk/templates/fluentd-es-ds.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/efk/templates/fluentd-es-ds.yaml.j2
@@ -18,22 +18,20 @@ kind: ServiceAccount
 metadata:
   name: fluentd-es
   namespace: {{boss__efk__namespace_name}}
+{%   if boss__efk__fluentd_service_account_labels is defined %}
   labels:
-    k8s-app: fluentd-es
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: efk
+    {{ boss__efk__fluentd_service_account_labels | to_nice_yaml(indent=2) }}
+{%   endif %}
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: fluentd-es
   # namespace: {{boss__efk__namespace_name}}
+{%   if boss__efk__fluentd_cluster_role_labels is defined %}
   labels:
-    k8s-app: fluentd-es
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: efk
+    {{ boss__efk__fluentd_cluster_role_labels | to_nice_yaml(indent=2) }}
+{%   endif %}
 rules:
 - apiGroups:
   - ""
@@ -50,11 +48,10 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: fluentd-es
   # FIXME: DON'T WE NEED THIS?? # namespace: {{boss__efk__namespace_name}} ( Answer is, no we dont )
+{%   if boss__efk__fluentd_cluster_role_binding_labels is defined %}
   labels:
-    k8s-app: fluentd-es
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: efk
+    {{ boss__efk__fluentd_cluster_role_binding_labels | to_nice_yaml(indent=2) }}
+{%   endif %}
 subjects:
 - kind: ServiceAccount
   name: fluentd-es
@@ -74,30 +71,29 @@ kind: DaemonSet
 metadata:
   name: fluentd-es-v2.2.1
   namespace: {{boss__efk__namespace_name}}
+{%   if boss__efk__fluentd_daemon_set_labels is defined %}
   labels:
-    k8s-app: fluentd-es
-    version: v2.2.1
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: efk
+    {{ boss__efk__fluentd_daemon_set_labels | to_nice_yaml(indent=2) }}
+{%   endif %}
 spec:
   selector:
+{%   if boss__efk__fluentd_daemon_set_spec_selector_match_labels is defined %}
     matchLabels:
-      k8s-app: fluentd-es
-      version: v2.2.1
+      {{ boss__efk__fluentd_daemon_set_spec_selector_match_labels | to_nice_yaml(indent=2) }}
+{%   endif %}
   template:
     metadata:
+{%   if boss__efk__fluentd_daemon_set_spec_template_metadata_labels is defined %}
       labels:
-        k8s-app: fluentd-es
-        kubernetes.io/cluster-service: "true"
-        version: v2.2.1
-        boss-part-of: efk
+        {{ boss__efk__fluentd_daemon_set_spec_template_metadata_labels | to_nice_yaml(indent=2) }}
+{%   endif %}
       # This annotation ensures that fluentd does not get evicted if the node
       # supports critical pod annotation based priority scheme.
       # Note that this does not guarantee admission on the nodes (#40573).
+{%   if boss__efk__fluentd_daemon_set_spec_template_metadata_annotations is defined %}
       annotations:
-        scheduler.alpha.kubernetes.io/critical-pod: ''
-        seccomp.security.alpha.kubernetes.io/pod: 'docker/default'
+        {{ boss__efk__fluentd_daemon_set_spec_template_metadata_annotations | to_nice_yaml(indent=2) }}
+{%   endif %}
     spec:
       priorityClassName: system-node-critical
       # serviceAccount: fluentd-es
@@ -108,7 +104,7 @@ spec:
         # SOURCE: https://github.com/kubernetes/kubernetes/blob/master/cluster/addons/fluentd-elasticsearch/fluentd-es-image/Dockerfile
         # image: gcr.io/google-containers/fluentd-elasticsearch:v2.2.1
         # image: k8s.gcr.io/fluentd-elasticsearch:v2.2.0
-        image: bossjones/fluentd-elasticsearch:v2.2.0
+        image: {{boss__efk__fluentd_image_repo}}:{{boss__efk__fluentd_version}}
         imagePullPolicy: Always
         # FIXME: Try using this guy instead
         # SOURCE: https://github.com/fluent/fluentd-kubernetes-daemonset/tree/master/docker-image/v1.3/debian-elasticsearch
@@ -130,11 +126,11 @@ spec:
         #   value: "changeme"
         resources:
           limits:
-            memory: 500Mi
+            memory: {{boss__efk__fluentd_mem_limit}}
             # memory: 200Mi
           requests:
-            cpu: 100m
-            memory: 200Mi
+            cpu: {{boss__efk__fluentd_cpu_requests}}
+            memory: {{boss__efk__fluentd_mem_requests}}
         volumeMounts:
         - name: varlog
           mountPath: /var/log
