--- a/extra_playbooks/roles/kubernetes-apps/efk/templates/kibana-ingress.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/efk/templates/kibana-ingress.yaml.j2
@@ -18,11 +18,11 @@ kind: Ingress
 metadata:
   name: kibana-ingress
   namespace: {{boss__efk__namespace_name}}
+{%   if boss__efk__kibana_ingress_labels is defined %}
   labels:
-    k8s-app: kibana-ingress
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    boss-part-of: efk
+    {{ boss__efk__kibana_ingress_labels | to_nice_yaml(indent=2) }}
+{%   endif %}
+{%   if boss__efk__kibana_ingress_annotations is defined %}
   annotations:
     # Note the nginx.ingress.kubernetes.io/ssl-redirect annotation. It is used since we are not specifying a host. When no host is specified, then the default-server is hit, which is configured with a self-signed certificate, and redirects http to https. This issue explains more.
     # https://github.com/kubernetes/ingress-nginx/issues/1567
@@ -37,10 +37,11 @@ metadata:
     # FIXME: something wrong with this # nginx.ingress.kubernetes.io/proxy-send-timeout: \"600\"
     # INFO: Note the nginx.ingress.kubernetes.io/ssl-redirect annotation. It is used since we are not specifying a host. When no host is specified, then the default-server is hit, which is configured with a self-signed certificate, and redirects http to https. This issue explains more.
     # https://github.com/kubernetes/ingress-nginx/issues/1567
-    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
+    {{ boss__efk__kibana_ingress_annotations | to_nice_yaml(indent=2) }}
     # INFO: Note the nginx.ingress.kubernetes.io/ssl-redirect annotation. It is used since we are not specifying a host. When no host is specified, then the default-server is hit, which is configured with a self-signed certificate, and redirects http to https. This issue explains more.
     # SOURCE: https://medium.com/@Oskarr3/setting-up-ingress-on-minikube-6ae825e98f82
     # nginx.ingress.kubernetes.io/rewrite-target: /
+{%   endif %}
 spec:
   # IMPORTANT
   # SOURCE: https://medium.com/@Oskarr3/setting-up-ingress-on-minikube-6ae825e98f82
@@ -48,7 +49,7 @@ spec:
   #     serviceName: default-http-backend
   #     servicePort: 80
   rules:
-  - host: kibana.hyenaclan.org
+  - host: {{boss__efk__kibana_subdomain}}.{{domain_root}}
     http:
       paths:
       - path: /
