--- a/extra_playbooks/roles/kubernetes-apps/efk/templates/kibana-service.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/efk/templates/kibana-service.yaml.j2
@@ -3,12 +3,10 @@ kind: Service
 metadata:
   name: kibana-logging
   namespace: {{boss__efk__namespace_name}}
+{%   if boss__efk__kibana_service_labels is defined %}
   labels:
-    k8s-app: kibana-logging
-    kubernetes.io/cluster-service: "true"
-    addonmanager.kubernetes.io/mode: Reconcile
-    kubernetes.io/name: "Kibana"
-    boss-part-of: efk
+    {{ boss__efk__kibana_service_labels | to_nice_yaml(indent=2) }}
+{%   endif %}
 spec:
   ports:
   - port: 5601
