wip: registry render

--- a/extra_playbooks/roles/kubernetes-apps/registry/templates/registry-rs.yml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/registry/templates/registry-rs.yml.j2
@@ -40,7 +40,7 @@
 #               protocol: TCP
 #       volumes:
 #         - name: registry-pvc
-# # {% if registry_storage_class != none %}
+# # {% if boss__registry__enable_pvc %}
 #           persistentVolumeClaim:
 #             claimName: registry-pvc
 # # {% else %}
