--- a/extra_playbooks/roles/kubernetes-apps/registry/templates/registry-rs.yml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/registry/templates/registry-rs.yml.j2
@@ -1,3 +1,4 @@
+{% raw %}
 # ---
 # kind: ReplicaSet
 # apiVersion: apps/v1
@@ -46,3 +47,4 @@
 # # {% else %}
 # #          emptyDir: {}
 # #{% endif %}
+{% endraw %}
