--- a/extra_playbooks/roles/kubernetes-apps/efk/templates/es-curator.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/efk/templates/es-curator.yaml.j2
@@ -5,7 +5,7 @@ metadata:
   namespace: {{boss__efk__namespace_name}}
 {%   if boss__efk__elasticsearch_curator_deployment_labels is defined %}
   labels:
-    {{ boss__efk__elasticsearch_curator_deployment_labels | to_nice_yaml(indent=2) }}
+    {{ boss__efk__elasticsearch_curator_deployment_labels | indent( width=4, indentfirst=True,blank=True) }}
 {%   endif %}
 spec:
   replicas: 1
