--- a/extra_playbooks/roles/kubernetes-apps/efk/templates/es-statefulset.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/efk/templates/es-statefulset.yaml.j2
@@ -7,7 +7,7 @@ metadata:
   namespace: {{boss__efk__namespace_name}}
 {%   if boss__efk__elasticsearch_service_account_labels is defined %}
   labels:
-    {{ boss__efk__elasticsearch_service_account_labels | to_nice_yaml(indent=2) }}
+    {{ boss__efk__elasticsearch_service_account_labels | indent( width=4, indentfirst=True,blank=True) }}
 {%   endif %}
 ---
 kind: ClusterRole
@@ -16,7 +16,7 @@ metadata:
   name: elasticsearch-logging
 {%   if boss__efk__elasticsearch_cluster_role_labels is defined %}
   labels:
-    {{ boss__efk__elasticsearch_cluster_role_labels | to_nice_yaml(indent=2) }}
+    {{ boss__efk__elasticsearch_cluster_role_labels | indent( width=4, indentfirst=True,blank=True) }}
 {%   endif %}
 rules:
 - apiGroups:
@@ -35,7 +35,7 @@ metadata:
   name: elasticsearch-logging
 {%   if boss__efk__elasticsearch_cluster_role_binding_labels is defined %}
   labels:
-    {{ boss__efk__elasticsearch_cluster_role_binding_labels | to_nice_yaml(indent=2) }}
+    {{ boss__efk__elasticsearch_cluster_role_binding_labels | indent( width=4, indentfirst=True,blank=True) }}
 {%   endif %}
 subjects:
 - kind: ServiceAccount
@@ -55,7 +55,7 @@ metadata:
   namespace: {{boss__efk__namespace_name}}
 {%   if boss__efk__elasticsearch_stateful_set_labels is defined %}
   labels:
-    {{ boss__efk__elasticsearch_stateful_set_labels | to_nice_yaml(indent=2) }}
+    {{ boss__efk__elasticsearch_stateful_set_labels | indent( width=4, indentfirst=True,blank=True) }}
 {%   endif %}
 spec:
   serviceName: elasticsearch-logging
@@ -64,7 +64,7 @@ spec:
   selector:
 {%   if boss__efk__elasticsearch_stateful_set_spec_selector_match_labels is defined %}
     matchLabels:
-        {{ boss__efk__elasticsearch_stateful_set_spec_selector_match_labels | to_nice_yaml(indent=2) }}
+        {{ boss__efk__elasticsearch_stateful_set_spec_selector_match_labels | indent( width=4, indentfirst=True,blank=True) }}
 {%   endif %}
     # matchLabels:
     #   k8s-app: elasticsearch-logging
@@ -73,7 +73,7 @@ spec:
     metadata:
 {%   if boss__efk__elasticsearch_stateful_set_spec_template_metadata_labels is defined %}
       labels:
-        {{ boss__efk__elasticsearch_stateful_set_spec_template_metadata_labels | to_nice_yaml(indent=2) }}
+        {{ boss__efk__elasticsearch_stateful_set_spec_template_metadata_labels | indent( width=4, indentfirst=True,blank=True) }}
 {%   endif %}
     spec:
       volumes:
